--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,7 @@
   android:gravity="center"
   tools:context=".MainActivity">
 
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hello World!"/>
+  <com.abishov.animatronic.GraphView
+    android:layout_width="128dp"
+    android:layout_height="128dp"/>
 </LinearLayout>
